[package]
name = "mtxcli"
version = "0.3.1"
authors = ["Tom Marble <tmarble@info9.net>"]
edition = "2018"

[dependencies]
clap = "2.33"
log = "0.4"
yansi = "0.5"
flexi_logger = { version = "0.15", features = ["specfile", "colors"] }
mkdirp = "1.0"
serde_json = "1.0"
regex = "1.3"
percent-encoding = "2.1"
futures = "0.3.4"
lazy_static = "1.4"
libc = "0.2"
nix = "0.17"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
