[package]
name = "mtxcli"
version = "0.5.0"
authors = ["Tom Marble <tmarble@info9.net>"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flexi_logger = { version = "0.24", default_features = false }
log = "0.4"
percent-encoding = "2.2"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
ureq = { version = "2.5", features = ["json"] }
